[package]
name = "coinpayments"
version = "0.1.0"
edition = "2021"
authors = ["Balamurali Pandranki"]
description = "A Rust library for interacting with the CoinPayments API"
license = "MIT"
repository = "https://github.com/itsbalamurali/coinpayments-rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
warp = "0.3"
mockito = "1.0"
